# RAGDev

./: README.md  main.py  pyproject.toml  requirements.txt
DataIngestParsing/: dataingestion.ipynb
DataIngestParsing/data/jsons/: jobs.json
DataIngestParsing/data/structured_data/: jobs.csv
DataIngestParsing/data/text_files/: loaderspython.txt  ospython.txt
DataIngestParsing/data/words/: Cover_letter.docx
