[project]
name = "ragdev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ir>=0.0.6",
    "jq>=1.11.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "pandas>=3.0.0",
    "pdfminer>=20191125",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "unstructured>=0.20.2",
]
